# yuxtapa

./: LICENSE  Makefile  Makefile.am  PKGBUILD  README  config.h  config.mk  configure.ac  packtar.sh  vhist.html  yuxtapa.install
client/: base.cpp  base.h  class_cpv.cpp  class_cpv.h  client.cpp  colourdef.h  inc_curses.h  input.cpp  input.h  msg.cpp  msg.h  network.cpp  network.h  settings.cpp  settings.h  view.cpp  view.h
common/: classes_common.h  col_codes.h  confdir.cpp  confdir.h  constants.h  coords.cpp  coords.h  los_lookup.h  netutils.cpp  netutils.h  timer.cpp  timer.h  utfstr.cpp  utfstr.h  util.cpp  util.h
manual/: adminlevels.html  archer.html  assassin.html  bots.html  bugs.html  chatting.html  cheating.html  classov.html  clientconf.html  clientscreen.html  combatmage.html  ethics.html  facing.html  faq.html  fighter.html  gametypes.html  getinstall.html  healer.html  index.html  intermission.html  introduction.html  keybindings.html  limbo.html  limiting.html  mapsaving.html  mapsymbols.html  maptypes.html  mindcrafter.html  miner.html  movement.html  objects.html  pctorch.html  planewalker.html  plans.html  progtech.html  qa.html  recording.html  rulemech.html  scout.html  serverconf.html  (+15 more)
server/: actives.cpp  actives.h  chores.cpp  chores.h  cmds.cpp  cmds.h  declares.h  ent.cpp  ent.h  game.cpp  game.h  log.cpp  log.h  map.cpp  map.h  network.cpp  network.h  noccent.cpp  noccent.h  occent.cpp  occent.h  players.cpp  players.h  server.cpp  server.h  settings.cpp  settings.h  sighandle.cpp  sighandle.h  spiral.cpp  spiral.h  viewpoint.cpp  viewpoint.h
testes/: Makefile  README  anims.cpp  lostbl.cpp  mrbrown.cpp  scenecol.cpp
tmplates/: client.conf  gen_map_tmplate.sh  server.conf
tmplates/vim/: scripts.vim
tmplates/vim/syntax/: yuxtapa.vim
